# procwatch

./: CMakeLists.txt  ProcWatchClient.cpp  ProcWatchClient.h  ProcWatchSvr.cpp  ProcWatchSvr.h  README.md  config.h  procwatch.cpp  procwatchd.cpp
docs/: CMakeLists.txt  client.plantuml  mainpage.dox  process_watcher.dox  procwatch.dox  server.plantuml
socket/: NetlinkSocket.cpp  NetlinkSocket.h  Socket.h  UnixSocket.cpp  UnixSocket.h
test/: unit_tests.cpp
util/: handle.h  utils.h
